--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="book clear my">나의 이야기</div>
             <div class="book clear my">나의 특징</div>
             <div class="book clear my">나의 경험</div>
+            <div class="book clear my">연 락 처</div>
             <div class="book future yet"></div>
-            <div class="book future"></div>
             <div class="book future"></div>
             <div class="book future"></div>
             <div class="book future"></div>
