--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
             <div class="book future"></div>
           </div>
           <div class="floor middle">
+            <div class="book clear work">크몽 첫 외주</div>
+            <div class="book future"></div>
+            <div class="book future"></div>
+            <div class="book future"></div>
+            <div class="book future"></div>
+            <div class="book future"></div>
+            <div class="book future"></div>
+            <div class="book future"></div>
+            <div class="book future"></div>
+            <div class="book future"></div>
+            <div class="book future"></div>
+            <div class="book future"></div>
+          </div>
+          <div class="floor bottom">
             <div class="book clear HTML">마크업 1</div>
             <div class="book clear HTML">마크업 2</div>
             <div class="book clear HTML">마크업 3</div>
@@ -55,20 +69,6 @@
             <div class="book clear JS">자바스크립트 3</div>
             <div class="book clear JS">자바스크립트 4</div>
             <div class="book clear JS">자바스크립트 5</div>
-            <div class="book future"></div>
-          </div>
-          <div class="floor bottom">
-            <div class="book future"></div>
-            <div class="book future"></div>
-            <div class="book future"></div>
-            <div class="book future"></div>
-            <div class="book future"></div>
-            <div class="book future"></div>
-            <div class="book future"></div>
-            <div class="book future"></div>
-            <div class="book future"></div>
-            <div class="book future"></div>
-            <div class="book future"></div>
             <div class="book future"></div>
           </div>
         </div>
